{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 95,
  "lineage": "ae79f6f2-ee8e-1bfe-24a3-840b8dd146c8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/networkInterfaces/lab02s3-db1-u-vm1-nic-1",
            "internal_domain_name_suffix": "lwshe2k1ynmujooxfthyojareh.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab02s3-db1-u-vm1-ipconfig1-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/publicIPAddresses/lab02s3-db1-u-vm1-pip-2",
                "subnet_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "australiacentral",
            "name": "lab02s3-db1-u-vm1-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "TerraformRG",
            "tags": {
              "ContactEmail": "raopulkit599@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vt_net"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/networkInterfaces/lab02s3-db1-u-vm1-nic-2",
            "internal_domain_name_suffix": "lwshe2k1ynmujooxfthyojareh.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab02s3-db1-u-vm1-ipconfig1-2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/publicIPAddresses/lab02s3-db1-u-vm1-pip-1",
                "subnet_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "australiacentral",
            "name": "lab02s3-db1-u-vm1-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "TerraformRG",
            "tags": {
              "ContactEmail": "raopulkit599@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vt_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "australiacentral",
            "name": "network-nsg1",
            "resource_group_name": "TerraformRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "australiacentral",
            "name": "network-nsg2",
            "resource_group_name": "TerraformRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/publicIPAddresses/lab02s3-db1-u-vm1-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "lab02s3-db1-u-vm1-pip-1",
            "resource_group_name": "TerraformRG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "raopulkit599@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/publicIPAddresses/lab02s3-db1-u-vm1-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "lab02s3-db1-u-vm1-pip-2",
            "resource_group_name": "TerraformRG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "raopulkit599@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "resource_group_name": "TerraformRG",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vt_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "resource_group_name": "TerraformRG",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vt_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-assoctation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vt_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-assoctation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vt_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vt_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7172a45d-c35b-4459-b9d7-2ccf87241127",
            "id": "/subscriptions/a7bf1fcc-718a-415e-993c-c6641bd720fa/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "australiacentral",
            "name": "network-vnet",
            "resource_group_name": "TerraformRG"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}